--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="16dp"
-        app:layout_constraintVertical_bias="0.35"
+        app:layout_constraintVertical_bias="0.2"
         android:contentDescription="@string/image_to_be_uploaded"
         android:adjustViewBounds="true"
         android:padding="8dp"/>
@@ -44,6 +44,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/upload"
         android:padding="16dp"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:layout_marginBottom="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
